--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 # .env.example
+# Base de datos
 DATABASE_URL=postgresql://user:password@localhost:5432/mydatabase
-JWT_SECRET=your-jwt-secret-key
-JWT_ALGORITHM=HS256
-JWT_EXPIRE_MINUTES=30
+
+# Ollama
 OLLAMA_API_URL=http://localhost:11434/api/generate
+OLLAMA_MODEL_NAME=mistral
+
+# Otros
 EMBEDDING_MODEL_NAME=distiluse-base-multilingual-cased-v1
 VECTOR_DB_INDEX=data/vector_db/index.faiss
 VECTOR_DB_DOCS=data/vector_db/docs.pkl
+PDF_SOURCE_PATH=data/pdfs
