--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Database Configuration
+# Database Configuration - SQLite (recomendado para Railway)
 DATABASE_URL=sqlite:///./mawell_assistant.db
 
 # Embedding Model Configuration
@@ -8,15 +8,17 @@ EMBEDDING_MODEL_NAME=all-MiniLM-L6-v2
 VECTOR_DB_INDEX=data/vector_db/index.faiss
 VECTOR_DB_DOCS=data/vector_db/docs.pkl
 
-# Ollama Configuration
+# Ollama Configuration (External API or Local)
 OLLAMA_API_URL=http://localhost:11434/api/generate
 OLLAMA_MODEL_NAME=mistral
+
+# Fallback mode when Ollama is not available
+FALLBACK_MODE=true
 
 # JWT Configuration
 SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Railway Production Overrides (will be set automatically by Railway)
-# DATABASE_URL=postgresql://user:password@host:port/dbname
-# PORT=8000
+# Railway Production Overrides
+# PORT=8000 (Railway lo asigna automáticamente)
